--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Warp Code</title>
-    <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, vitrine, e-commerce, applications web">
+    <meta name="description" lang="fr" content="Warp Code Agence Web Creative a Vannes, realisation de sites internet, vitrine, e-commerce, applications web">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="publisher" content="WarpCode56">
     <meta name="keywords" lang="fr" content="développement web, agence, responsive, design, application web, Vannes, Morbihan">
@@ -36,12 +36,11 @@
 	<link rel="stylesheet" href="css/grid.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/color.css" />
-	<link rel="stylesheet" href="css/font-awesome.css" />
 	<link rel="stylesheet" href="css/et-line.css" />
 	<link rel="stylesheet" href="css/owl.carousel.css" />
 	<link rel="stylesheet" href="css/owl.transitions.css" />
 	<link rel="stylesheet" href="css/retina.css" />
-
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<!-- ==================================================Favicons	================================================== -->
 	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
 	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60.png">
@@ -94,7 +93,7 @@
 
 			<video id="videoBackground" class="banniere"  autoplay="1" ><source src="videos/warp1.mp4" /></video>	
 			
-			<p id="wrapLogo"><img src="images/poster.png" class="poster" alt="logo de l'entreprise"></p>
+			<div id="wrapLogo"><img src="images/poster.png" class="poster" alt="logo de l'entreprise"></div>
 
 		<a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
 			<div class="link-down fade-elements"></div>
@@ -161,18 +160,24 @@
 				<div class="four columns">
 					<div class="about-wrap">
 						<div class="about-icon">
-							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							    x="0px" y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-								<rect x="1" y="7" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="62" height="50" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1" y1="15" x2="63" y2="15" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="10" y1="11" x2="6" y2="11" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="18" y1="11" x2="14" y2="11" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="26" y1="11" x2="22" y2="11" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="6" y1="25" x2="33" y2="25" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="6" y1="33" x2="33" y2="33" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="6" y1="41" x2="33" y2="41" />
-								<rect x="38" y="25" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="19" height="16" />
-							</svg>
+							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							width="48px" height="48px" viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve">
+					   <g id="XMLID_2_">
+						   <g id="XMLID_4_">
+							   <g id="XMLID_9_">
+								   <path fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_12_" class="st0" d="M47.1,42.4c0,0.9-0.7,1.6-1.6,1.6h-8.9c-0.9,0-1.6-0.7-1.6-1.6V21.6c0-0.9,0.7-1.6,1.6-1.6
+									   h8.9c0.9,0,1.6,0.7,1.6,1.6V42.4z"/>
+								   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_11_" class="st0" x1="36.2" y1="24" x2="46.2" y2="24"/>
+								   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_10_" class="st0" x1="35.9" y1="40" x2="45.9" y2="40"/>
+							   </g>
+							   <path fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_8_" class="st0" d="M35.1,36H4c-1.4,0-2.9-1.5-2.9-2.9V6.2C1.1,4.8,2.6,4,4,4h40.9c1.4,0,2.3,0.8,2.3,2.2V19"/>
+							   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_7_" class="st0" x1="2.1" y1="8" x2="46.1" y2="8"/>
+							   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_6_" class="st0" x1="2.1" y1="30" x2="35.1" y2="30"/>
+							   <polygon fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_5_" class="st0" points="30.2,44 18.3,44 20,36 28.5,36 		"/>
+						   </g>
+						   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_3_" class="st0" x1="16.1" y1="44" x2="32.1" y2="44"/>
+					   </g>
+					   </svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.5s">Application Web</h5>
 						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.5s">Véritable logiciel en ligne, elle permet de manipuler les données de manière dynamique via une interface administrable.</p>
@@ -203,7 +208,7 @@
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
 						<div class="services-wrap back-dark3">
 							<h5>
-								<span>&#xe001;</span>Identité Visuelle</h5>
+								<span><i class="fas fa-desktop"></i></span>Identité Visuelle</h5>
 							<p>Nous développons votre site web sur-mesure. Son ergonomie est pensée afin d'assurer une expérience
 								utilisateur optimale
 								tout en restant simple d'utilisation. Nous faisons converger vos besoins tout en prenant en compte les réalités
@@ -214,7 +219,7 @@
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
 						<div class="services-wrap back-dark3">
 							<h5>
-								<span>&#xe02b;</span>Développement Web</h5>
+								<span><i class="fas fa-cogs"></i></span>Développement Web</h5>
 							<p>Nous développons des sites internet vitrine, e-commerce et des applications web en utilisant les langages
 								HTML5, CSS3,
 								JavaScript, PHP 7, MySQL ainsi que les CMS (système de gestion de contenu) WordPress & PrestaShop.</p>
@@ -223,7 +228,7 @@
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<div class="services-wrap back-dark3">
 							<h5>
-								<span>&#xe040;</span>Responsive Web Design.</h5>
+								<span><i class="fas fa-mobile-alt"></i></span>Responsive Web Design.</h5>
 							<p>Nos sites sont conçus et optimisés afin d'offrir une navigation confortable sur tous types de supports
 								(smartphones,
 								tablettes, grand écran...). Plus de 60% des français surfent aujourd'hui sur le web avec leur smartphone.
@@ -237,7 +242,7 @@
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
 						<div class="services-wrap back-dark3">
 							<h5>
-								<span>&#xe033;</span>Référencement Naturel & SEO</h5>
+								<span><i class="fas fa-chart-line"></i></span>Référencement Naturel & SEO</h5>
 							<p>Nous mettons en oeuvre tous les outils nécessaires pour vous assurer une visibilité et une meilleure
 								indexation dans
 								les moteurs de recherche.</p>
@@ -246,7 +251,7 @@
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
 						<div class="services-wrap back-dark3">
 							<h5>
-								<span>&#xe050;</span>Web Marketing</h5>
+								<span><i class="fas fa-chart-pie"></i></span>Web Marketing</h5>
 							<p>Nous proposons des solutions de statistiques avancées. Notre approche orientée vers le Community Management
 								permet
 								de déployer votre présence sur les réseaux sociaux en garantissant votre e-reputation.</p>
@@ -255,7 +260,7 @@
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<div class="services-wrap back-dark3">
 							<h5>
-								<span>&#xe032;</span>Suivi personnalisé</h5>
+								<span><i class="fas fa-user-edit"></i></i></span>Suivi personnalisé</h5>
 							<p>Nous assurons l'hébergement (nom de domaine, e-mail, espace disque...) et la sécurité de vos données
 								personnelles.
 								Et nous vous accompagnons dans l'évolution de votre projet.</p>
@@ -282,7 +287,7 @@
 				</div>
 				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
 					<div class="team-wrap fst">
-						<img src="images/team1.jpg" alt="photo portrait Sebastien" />
+						<img src="images/team1.png" alt="photo portrait Sebastien" />
 						<h6>Sébastien Champalaune</h6>
 						<p>Créative developper
 							<br>39 ans
@@ -302,7 +307,7 @@
 				</article>
 				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
 					<div class="team-wrap snd">
-						<img src="images/team2.jpg" alt="photo portrait Florent" />
+						<img src="images/team2.png" alt="photo portrait Florent" />
 						<h6>Florent Sadot</h6>
 						<p>Développeur front et back end
 							<br>37 ans
@@ -321,7 +326,7 @@
 				</article>
 				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.8s after 0.2s">
 					<div class="team-wrap snd">
-						<img src="images/team3.jpg" alt="photo portrait Cedric" />
+						<img src="images/team3.png" alt="photo portrait Cedric" />
 						<h6>Cédric Le Tallec</h6>
 						<p>Développeur front et back end
 							<br>35 ans
@@ -505,7 +510,13 @@
 				<div class="twelve columns center-item" data-scroll-reveal="enter bottom move 150px over 0.7s after 0.2s">
 					<div id="owl-logos" class="owl-carousel owl-theme">
 						<article class="item">
-							<img src="images/logos/white1.png" alt="" />
+							<img src="images/logos/sara.png" alt="logo de saraphotographie" />
+						</article>
+						<article class="item">
+							<img src="images/logos/luminis.png" alt="logo Luminis Prod" />
+						</article>
+						<article class="item">
+							<img src="images/logos/tribus1.png" alt="logo tribus virtuelles" />
 						</article>
 						<article class="item">
 							<img src="images/logos/garden.png" alt="logo de Jardin Indoor" />
@@ -514,10 +525,7 @@
 							<img src="images/logos/kercode1.png" alt="logo de Kercode" />
 						</article>
 						<article class="item">
-							<img src="images/logos/white3.png" alt="logo de Luminis Prod" />
-						</article>
-						<article class="item">
-							<img src="images/logos/white4.png" alt="" />
+							<img src="images/logos/greta1.png" alt="logo du greta bretagne sud" />
 						</article>
 					</div>
 				</div>
