--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -53,17 +53,13 @@
 	<nav class="menu">
             <div class="logo"></div>
             <ul>
-                <li class="close-menu"><a href="#home">Retour à l'acueil</a></li>
+                <li class="close-menu"><a href="https://www.warp-code.fr">Retour à l'acueil</a></li>
                
             </ul>
         </nav>
-    <header class="section full-height back-dark" id="home">
+    <header class="section full-height back-dark header" id="home">
 
-            <img class="poster-mentions" src="images/poster.png" alt="poster">
-
-        <a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
-            <div class="link-down fade-elements"></div>
-        </a>
+        <h1>Mentions légales</h1>
 	<!--==================================================MENU    ================================================== -->
 
 
