--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html class="no-js" lang="fr-FR">
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125429015-1"></script>
+
+<script>
+
+ window.dataLayer = window.dataLayer || [];
+
+ function gtag(){dataLayer.push(arguments);}
+
+ gtag('js', new Date());  gtag('config', 'UA-125429015-1');
+
+</script>
 	<meta charset="utf-8">
 	<title>Warp Code</title>
     <meta name="description" lang="fr" content="Warp Code Agence Web Creative a Vannes, realisation de sites internet, vitrine, e-commerce, applications web">
@@ -23,13 +36,13 @@
 	<meta property="og:url" content="www.warp-code.fr" />
 	<meta property="og:type" content="website" />
 	<meta property="og:site_name" content="warp-code.fr" />
-	<meta property="og:description" content="Warp-Code, Agence Web Créative" />
+	<meta property="og:description" content="Agence Web Créative installée à Vannes et réalisant vos sites internet vitrine, e-commerce et applications web." />
 	<meta property="og:image" content="images/lion.png" />
 <!--******************Meta Twitter**************-->             
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Warp-Code, Agence Web Créative" />
 	<meta name="twitter:url" content="www.warp-code.fr" />
-	<meta name="twitter:description" content="Warp-Code, Agence Web Créative" />
+	<meta name="twitter:description" content="Agence Web Créative installée à Vannes et réalisant vos sites internet vitrine, e-commerce et applications web." />
 	<meta name="twitter:image" content="images/lion.png" />
 	<!--================================================== CSS  ================================================== -->
 	<link rel="stylesheet" href="css/style.css" />
@@ -295,11 +308,9 @@
 
 						<div class="social-team">
 							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://twitter.com/code_warp">&#xf099;</a>
-								</li>
+
 								<li class="icon-team tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.facebook.com/WarpCode56">&#xf09a;</a>
+									<a href="https://www.linkedin.com/in/s%C3%A9bastien-champalaune-372a55130/"><i class="fab fa-linkedin-in"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -314,11 +325,9 @@
 							<br>Concepteur et intégrateur d'applications web</p>
 						<div class="social-team">
 							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://twitter.com/code_warp">&#xf099;</a>
-								</li>
-								<li class="icon-team tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.facebook.com/WarpCode56">&#xf09a;</a>
+
+								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
+									<a href="https://www.linkedin.com/in/florent-sadot-0354461a/"><i class="fab fa-linkedin-in"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -333,11 +342,9 @@
 							<br>Concepteur et intégrateur d'applications web</p>
 						<div class="social-team">
 							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://twitter.com/code_warp">&#xf099;</a>
-								</li>
-								<li class="icon-team tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.facebook.com/WarpCode56">&#xf09a;</a>
+
+								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
+									<a href="https://www.linkedin.com/in/c%C3%A9dric-le-tallec-a81924bb/"><i class="fab fa-linkedin-in"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -522,6 +529,9 @@
 							<img src="images/logos/garden.png" alt="logo de Jardin Indoor" />
 						</article>
 						<article class="item">
+							<img src="images/logos/chris.png" alt="logo de DrawnInBox" />
+						</article>
+						<article class="item">
 							<img src="images/logos/kercode1.png" alt="logo de Kercode" />
 						</article>
 						<article class="item">
@@ -632,10 +642,10 @@
 					<div class="social-footer">
 						<ul class="list-social-footer">
 							<li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-								<a href="https://twitter.com/code_warp">&#xf099;</a>
+								<a href="https://twitter.com/code_warp"><i class="fab fa-twitter"></i></a>
 							</li>
 							<li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-								<a href="https://www.facebook.com/WarpCode56">&#xf09a;</a>
+								<a href="https://www.facebook.com/WarpCode56"><i class="fab fa-facebook-f"></i></a>
 							</li>
 						</ul>
 					</div>
