--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<header class="section full-height back-dark" style="background: black;" id="home">
 
 
-			<video id="videoBackground" class="banniere"  autoplay="1" ><source src="videos/warp1.mp4" /></video>	
+			<video id="videoBackground" class="banniere"  autoplay ><source src="videos/warp1.mp4" /></video>	
 			
 			<div id="wrapLogo"><img src="images/poster.png" class="poster" alt="logo de l'entreprise"></div>
 
@@ -167,7 +167,7 @@
 							</svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Site e-commerce</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Appellée aussi boutique en ligne, il permet de développer votre activité commerciale.</p>
+						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Appellé aussi boutique en ligne, il permet de développer votre activité commerciale.</p>
 					</div>
 				</div>
 				<div class="four columns">
@@ -273,7 +273,7 @@
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<div class="services-wrap back-dark3">
 							<h5>
-								<span><i class="fas fa-user-edit"></i></i></span>Suivi personnalisé</h5>
+								<span><i class="fas fa-user-edit"></i></span>Suivi personnalisé</h5>
 							<p>Nous assurons l'hébergement (nom de domaine, e-mail, espace disque...) et la sécurité de vos données
 								personnelles.
 								Et nous vous accompagnons dans l'évolution de votre projet.</p>
@@ -309,7 +309,7 @@
 						<div class="social-team">
 							<ul class="list-social-team">
 
-								<li class="icon-team tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
+								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
 									<a href="https://www.linkedin.com/in/s%C3%A9bastien-champalaune-372a55130/"><i class="fab fa-linkedin-in"></i></a>
 								</li>
 							</ul>
@@ -327,7 +327,7 @@
 							<ul class="list-social-team">
 
 								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.linkedin.com/in/florent-sadot-0354461a/"><i class="fab fa-linkedin-in"></i></a>
+									<a href="https://www.linkedin.com/in/florent-sadot/"><i class="fab fa-linkedin-in"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -502,7 +502,7 @@
 				</section> -->
 
 		<!--================================================== Confiez vos projets   ================================================== -->
-		</div>
+	
 		<a href="#contact" data-gal="m_PageScroll2id" data-ps2id-offset="78">
 			<div class="section back-dark">
 				<div class="portfolio-bottom-link">Confiez-nous vos projets
