--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 	<meta name="twitter:description" content="Agence Web Créative installée à Vannes et réalisant vos sites internet vitrine, e-commerce et applications web." />
 	<meta name="twitter:image" content="images/lion.png" />
 	<!--================================================== CSS  ================================================== -->
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/grid.css" />
+	<link rel="stylesheet" href="css/style-dist.css" />
+	<link rel="stylesheet" href="css/grid-dist.css" />
 	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/color.css" />
-	<link rel="stylesheet" href="css/et-line.css" />
-	<link rel="stylesheet" href="css/owl.carousel.css" />
-	<link rel="stylesheet" href="css/owl.transitions.css" />
-	<link rel="stylesheet" href="css/retina.css" />
+	<link rel="stylesheet" href="css/color-dist.css" />
+	<link rel="stylesheet" href="css/et-line-dist.css" />
+	<link rel="stylesheet" href="css/owl.carousel-dist.css" />
+	<link rel="stylesheet" href="css/owl.transitions-dist.css" />
+	<link rel="stylesheet" href="css/retina-dist.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	<!-- ==================================================Favicons	================================================== -->
@@ -113,7 +113,7 @@
 					<div class="about-wrap">
 						<div class="about-icon">
 							<svg version="1.1" id="svg-icon-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							 x="0px" y="0px" width="70px" height="70px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							 x="0px" y="0px" width="60px" height="60px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 								<g>
 									<rect fill="none" stroke="#000000" stroke-width="1" stroke-miterlimit="10" x="8" y="8.7" class="st0" width="46"
 									 height="48" />
@@ -145,7 +145,7 @@
 					<div class="about-wrap">
 						<div class="about-icon">
 							<svg version="1.1" id="svg-icon-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							 x="0px" y="0px" width="90px" height="90px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							 x="0px" y="0px" width="70px" height="70px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 								<g>
 									<polyline fill="none" stroke="#000000" stroke-width="1" stroke-miterlimit="10" points="4.3,9.7 4.3,7.7 11,7.7 19.6,29.7 41.6,29.7 46.9,15.4 17.6,11     " />
 									<g>
@@ -171,7 +171,7 @@
 					<div class="about-wrap">
 						<div class="about-icon">
 							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							 x="0px" y="0px" width="70px" height="70px" viewBox="0 0 60.5 46.5" style="enable-background:new 0 0 60.5 46.5;"
+							 x="0px" y="0px" width="60px" height="60px" viewBox="0 0 60.5 46.5" style="enable-background:new 0 0 60.5 46.5;"
 							 xml:space="preserve">
 								<g>
 									<g>
