--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 	<meta name="twitter:description" content="Agence Web Créative installée à Vannes et réalisant vos sites internet vitrine, e-commerce et applications web." />
 	<meta name="twitter:image" content="images/lion.png" />
 	<!--================================================== CSS  ================================================== -->
-	<link rel="stylesheet" href="css/style-dist.css" />
-	<link rel="stylesheet" href="css/grid-dist.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/grid.css" />
 	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/color-dist.css" />
-	<link rel="stylesheet" href="css/et-line-dist.css" />
-	<link rel="stylesheet" href="css/owl.carousel-dist.css" />
-	<link rel="stylesheet" href="css/owl.transitions-dist.css" />
-	<link rel="stylesheet" href="css/retina-dist.css" />
+	<link rel="stylesheet" href="css/color.css" />
+	<link rel="stylesheet" href="css/et-line.css" />
+	<link rel="stylesheet" href="css/owl.carousel.css" />
+	<link rel="stylesheet" href="css/owl.transitions.css" />
+	<link rel="stylesheet" href="css/retina.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	<!-- ==================================================Favicons	================================================== -->
