--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 						<div class="social-team">
 							<ul class="list-social-team">
 								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.linkedin.com/in/s%C3%A9bastien-champalaune-372a55130/"><i class="fab fa-linkedin-in"></i></a>
+									<a href="https://www.linkedin.com/in/s%C3%A9bastien-champalaune/"><i class="fab fa-linkedin-in"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -338,7 +338,7 @@
 						<div class="social-team">
 							<ul class="list-social-team">
 								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.linkedin.com/in/c%C3%A9dric-le-tallec-a81924bb/"><i class="fab fa-linkedin-in"></i></a>
+									<a href="https://www.linkedin.com/in/c%C3%A9dric-le-tallec/"><i class="fab fa-linkedin-in"></i></a>
 								</li>
 							</ul>
 						</div>
