--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 							<img src="images/logos/sara.png" alt="logo de saraphotographie" />
 						</article>
 						<article class="item">
-							<img src="images/logos/luminis.png" alt="logo Luminis Prod" />
+							<a href="http://www.luminisprod.com"><img src="images/logos/luminis.png" alt="logo Luminis Prod" /></a>
 						</article>
 						<article class="item">
 							<img src="images/logos/tribus1.png" alt="logo tribus virtuelles" />
