--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 	<link rel="stylesheet" href="css/grid.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/color.css" />
-	<link rel="stylesheet" href="css/et-line.css" />
 	<link rel="stylesheet" href="css/owl.carousel.css" />
 	<link rel="stylesheet" href="css/owl.transitions.css" />
 	<link rel="stylesheet" href="css/retina.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Nunito" rel="stylesheet">
 	<!-- ==================================================Favicons	================================================== -->
 	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
 	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60.png">
