--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html class="no-js" lang="fr-FR">
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125429015-1"></script>
@@ -66,6 +67,7 @@
 	<!-- ==================================================Script	================================================== -->
 	<script src="js/modernizr.custom.js"></script>
 </head>
+
 <body class="royal_preloader">
 	<div id="royal_preloader"></div>
 	<!--==================================================MENU    ================================================== -->
@@ -283,9 +285,9 @@
 				</div>
 			</div>
 		</section>
- 		<!--==================================================Team ================================================== -->
+		<!--==================================================Team ================================================== -->
 		<section id="team" class="section padding-top-bottom back-dark3">
-			<div class="container">
+			<div class="container ">
 				<div class="twelve columns">
 					<div class="title-text left">
 						<p>Qui&nbsp;sommes&nbsp;nous&nbsp;?&nbsp;<span>La&nbsp;Team</span>
@@ -296,54 +298,64 @@
 							unique pour vos visiteurs.</h3>
 					</div>
 				</div>
-				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
-					<div class="team-wrap fst">
-						<img src="images/team1.png" alt="photo portrait Sebastien" />
-						<h6>Sébastien Champalaune</h6>
-						<p>Créative developper
-							<br>39 ans
-							<br>Concepteur et intégrateur d'applications web</p>
-						<div class="social-team">
-							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.linkedin.com/in/s%C3%A9bastien-champalaune/"><i class="fab fa-linkedin-in"></i></a>
-								</li>
-							</ul>
+				</div>
+				<div class="teamCard">
+
+					<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
+						<div class="card"><img src="images/team1.png" />
+							<div class="info">
+								<h4>Créative développeur</h4>
+								<p>39 ans
+									<br />
+									Concepteur et intégrateur d'applications web</p>
+								<div class="social-team">
+									<ul class="list-social-team">
+										<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
+											<a href="https://www.linkedin.com/in/sébastien-champalaune/"><i class="fab fa-linkedin-in"></i></a>
+										</li>
+									</ul>
+								</div>
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
-					<div class="team-wrap snd">
-						<img src="images/team2.png" alt="photo portrait Florent" />
-						<h6>Florent Sadot</h6>
-						<p>Développeur front et back end
-							<br>37 ans
-							<br>Concepteur et intégrateur d'applications web</p>
-						<div class="social-team">
-							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.linkedin.com/in/florent-sadot/"><i class="fab fa-linkedin-in"></i></a>
-								</li>
-							</ul>
+						<h4>Sébastien Champalaune</h4>
+					</article>
+					<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
+						<div class="card"><img src="images/team2.png" />
+							<div class="info">
+								<h4>Développeur front / back end</h4>
+								<p>37 ans
+									<br />
+									Concepteur et intégrateur d'applications web</p>
+								<div class="social-team">
+									<ul class="list-social-team">
+										<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
+											<a href="https://www.linkedin.com/in/florent-sadot/"><i class="fab fa-linkedin-in"></i></a>
+										</li>
+									</ul>
+								</div>
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.8s after 0.2s">
-					<div class="team-wrap snd">
-						<img src="images/team3.png" alt="photo portrait Cedric" />
-						<h6>Cédric Le Tallec</h6>
-						<p>Développeur front et back end
-							<br>35 ans
-							<br>Concepteur et intégrateur d'applications web</p>
-						<div class="social-team">
-							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-									<a href="https://www.linkedin.com/in/c%C3%A9dric-le-tallec/"><i class="fab fa-linkedin-in"></i></a>
-								</li>
-							</ul>
+						<h4>Florent Sadot</h4>
+					</article>
+					<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.8s after 0.2s">
+						<div class="card"><img src="images/team3.png" />
+							<div class="info">
+								<h4>Développeur front / back end</h4>
+								<p>36 ans
+									<br />
+									Concepteur et intégrateur d'applications web</p>
+								<div class="social-team">
+									<ul class="list-social-team">
+										<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
+											<a href="https://www.linkedin.com/in/cédric-le-tallec/"><i class="fab fa-linkedin-in"></i></a>
+										</li>
+									</ul>
+								</div>
+							</div>
 						</div>
-					</div>
-				</article>
+						<h4>Cédric Le Tallec</h4>
+					</article>
+			
 			</div>
 		</section>
 		<!--================================================== compteurs    ================================================== -->
@@ -533,7 +545,7 @@
 			</div>
 		</section>
 	</section>
-		<!--================================================== MAP GOOGLE    ================================================== -->
+	<!--================================================== MAP GOOGLE    ================================================== -->
 	<section class="section back-black" id="contact">
 		<div id="map">
 		</div>
@@ -656,4 +668,5 @@
 	<script src="js/contact.js"></script>
 	<script src="js/custom.js"></script>
 </body>
+
 </html>
