--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<li class="close-menu"><a href="#home">Accueil</a></li>
 			<li class="close-menu"><a href="#services">Services</a></li>
 			<li class="close-menu"><a href="#team">Team</a></li>
-			<li class="close-menu"><a href="#contact">Contact</a></li>
+			<li class="close-menu"><a href="#contactForm">Contact</a></li>
 		</ul>
 	</nav>
 	<div class="burger">
@@ -165,7 +165,7 @@
 							</svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Site e-commerce</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Appelée aussi boutique en ligne, il permet
+						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Appelé aussi boutique en ligne, il permet
 							de développer votre activité commerciale.</p>
 					</div>
 				</div>
@@ -551,11 +551,12 @@
 		</div>
 		<!-- <div class="mask"></div> -->
 		<!--================================================== CONTACT    ================================================== -->
-		<section class="section">
-			<div class="container">
+		<section class="section" >
+			<div id="contactForm">can u read this ?</div>
+			<div class="container" >
 				<div class="twelve columns remove-top">
 					<article class="contact-det-wrap" data-scroll-reveal="enter bottom move 100px over 0.7s after 0.3s">
-						<div class="contact-det">
+						<div class="contact-det" >
 							<p>1.
 								<span>écrivez-nous</span>
 							</p>
