--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -23,13 +23,13 @@
     <link rel="stylesheet" href="css/grid.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/color.css" />
-    <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/et-line.css" />
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/owl.transitions.css" />
     <link rel="stylesheet" href="css/retina.css" />
-
-    <!-- ==================================================Favicons	================================================== -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+	 crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Nunito" rel="stylesheet">
+	<!-- ==================================================Favicons	================================================== -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon//apple-icon-72x72.png">
@@ -227,13 +227,13 @@
                 <div class="footer-top">
                     <div class="social-footer">
                         <ul class="list-social-footer">
-                            <li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-                                <a href="https://twitter.com/code_warp">&#xf099;</a>
-                            </li>
-                            <li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-                                <a href="https://www.facebook.com/WarpCode56">&#xf09a;</a>
-                            </li>
-                        </ul>
+							<li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
+								<a href="https://twitter.com/code_warp"><i class="fab fa-twitter"></i></a>
+							</li>
+							<li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
+								<a href="https://www.facebook.com/WarpCode56"><i class="fab fa-facebook-f"></i></a>
+							</li>
+						</ul>
                     </div>
                 </div>
             </article>
